Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-27 (SVN):
    * h2patch: Removed code checking for free disk space in DOS builds.

2012-06-27 (SVN):
    * utils, dcc (Init_Dcc), hcc (InitData): Copy over def_ret.ofs and
      def_parms[x].ofs initialization stuff from InitData (), just in
      case.. Initialize the pr_globals pointer in InitData ().

2012-06-27 (SVN):
    * utils, dcc: Added new Get_Immediate() and Clear_Immediates(), made
      Make_Immediate() to only allocate new values. Commented out offset
      overrun debug messages in them. Added -name command line argument
      either for specifying a name other than progs.src for the compiler
      like hcc itself or for specifying a name other than progs.dat for
      the decompiler.

2012-06-27 (SVN):
    * updated the ReleaseNotes file.

2012-06-27 (SVN):
    * utils, dcc: Isolated all decompiler stuff to dcc.c. Changed the
      decompiler to not copy the progs data but use pointers to loaded
      file instead. Changed the decompiler to not use static buffers but
      dynamically allocate memory instead: fixes decompilation of rival
      kingdoms progs. Changed the compiler-side MAX_STRINGS, MAX_GLOBALS
      and MAX_STATEMENTS macros to hcc values. Removed the MAX_PARMS and
      OFS_* macros from qcc.h which are already defined in pr_comp.h to
      the same values.

2012-06-27 (SVN):
    * utils, hcc: Minor cleanups.
    * updated version date stamp to 2012-06-27.

2012-06-25 (SVN):
    * in_sdl.c: Fixed after r4803 so that SDL_EnableUNICODE() is called
      correctly. Makes SHIFT keys to work properly on the console again.
      Also made K_KP_5 to send '5' when not in game mode, regardless of
      the numlock status.

2012-06-25 (SVN):
    * keys.c: Prevented KP_NUMLOCK from binding. Minor cleanups.

2012-06-24 (SVN):
    * keys.c (Key_ClearStates): Instead of clearing all key's down state